--- a/Lógica_de_Programação.ipynb
+++ b/Lógica_de_Programação.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfkfPJoJH7brpSHh4j3grq",
+      "authorship_tag": "ABX9TyMkYZJaquG8OPR6i7m2UK4X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -273,7 +273,7 @@
       "metadata": {
         "id": "AmWYkhSEJM8y"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -293,7 +293,7 @@
       "metadata": {
         "id": "nXV7qoVDJUYk"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +325,7 @@
         "id": "J5pOi1SNJ7nV",
         "outputId": "746b39c8-8e7e-4343-abd0-63675a9a1a1f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +357,7 @@
         "id": "WUu8NU4Qdre6",
         "outputId": "1f66227d-fe41-4c00-b96b-7b93dbfbf235"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,7 +394,7 @@
         "id": "rUnMUSDPe87E",
         "outputId": "d81e3601-e9b8-4537-b99d-975d4a29bc59"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,7 +435,7 @@
         "id": "Toyl7NFugKdp",
         "outputId": "c364cdec-9a38-41cd-b818-ec7e7fb6acf3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
       "metadata": {
         "id": "Qkf0Nv4-i51R"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -479,7 +479,7 @@
         "id": "OjDhQZBXuIvF",
         "outputId": "3b6efae1-a91b-41a9-b097-716329e0fb13"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +514,7 @@
         "id": "y0n_sMPSu7xb",
         "outputId": "53ec0495-b050-45c6-8f90-1c10f8aa667b"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +549,7 @@
         "id": "b1w_9fk0vyih",
         "outputId": "ade9f365-f26c-439d-b535-e424a7de1a00"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
         "id": "uJOFV6n8zmc3",
         "outputId": "e1d0ba02-0477-4a10-8fce-d08a81a94669"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,7 +620,7 @@
         "id": "yzRXVmZD03kK",
         "outputId": "792e2da4-f532-4e71-94c4-cbfbb036bfd5"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -647,7 +647,7 @@
         "id": "ASGo3IeF0_9s",
         "outputId": "99abb1e5-5369-4ddf-fe15-0b0c92325afe"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -670,7 +670,7 @@
       "metadata": {
         "id": "2cdrBhrn1DgL"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -688,7 +688,7 @@
       "metadata": {
         "id": "Q-VI6-Vk3wtH"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +706,7 @@
       "metadata": {
         "id": "pVFReb8x4KyX"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -726,7 +726,7 @@
       "metadata": {
         "id": "1E_KjjCr4vQm"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -741,7 +741,7 @@
         "id": "1rXxZXNs5GvX",
         "outputId": "39f99f81-da01-4564-d169-4d45fc93e9c9"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -763,7 +763,7 @@
       "metadata": {
         "id": "r-rUE7Qb5ZOU"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -785,7 +785,7 @@
         "id": "_oSkvF-05jLT",
         "outputId": "70341c62-65e8-4d95-cd4a-a86880f6ebb0"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -825,7 +825,7 @@
         "id": "dlFDtumG7mnP",
         "outputId": "b8715bfe-0ccf-4e31-f710-a82cd509943a"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -852,7 +852,7 @@
         "id": "o9xAkcEC8uyQ",
         "outputId": "7fd5b900-f941-4583-f95f-0fd2b1e3c71b"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,7 +890,7 @@
         "id": "R18Hddzq-CKl",
         "outputId": "c34ceb3b-df75-451a-c976-b526d7dd89ec"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,6 +912,120 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Import**"
+      ],
+      "metadata": {
+        "id": "aLmTDQVR2n9k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from random import randrange, seed"
+      ],
+      "metadata": {
+        "id": "Xad9MFQH2wBN"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "seed(7)"
+      ],
+      "metadata": {
+        "id": "sRz8Cla84yzd"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "randrange(0,20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l54vYrWu3QyV",
+        "outputId": "876923df-72ee-42b2-8a92-bea7a5498225"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notas_matematica = []\n",
+        "\n",
+        "for notas in range(8):\n",
+        "  notas_matematica.append(randrange(0,11))\n",
+        "\n",
+        "notas_matematica"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fx2ra6IN3YmS",
+        "outputId": "b2f1a411-b0d7-46bb-e64d-e15cb786ee91"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[8, 1, 9, 4, 8, 10, 2, 1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(notas_matematica)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BtBjJFA04Z5T",
+        "outputId": "391d1eee-3156-4906-bf16-c874fc48557b"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
     }
   ]
 }
